tests/fixtures/invalid/i004/cross_plugin.spec
behavior create_user "Create User" {
  adrs [use_postgresql]
  contract """user is created"""
}
